[tool.poetry]
name = "backuppressure-for-dummies"
version = "0.1.0"
description = "Simple example to show backpressure"
authors = ["drabbit17 <matteo.pallini17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
aiohttp = "^3.8.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
